Fix background error on small screens

--- a/itechGroup/static/css/index.css
+++ b/itechGroup/static/css/index.css
@@ -66,6 +66,8 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
     width:100%; 
     height:100%;
     position: relative;
